k8s-samples/dameonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: ds-example
spec:
  selector:
    matchLabels:
      name: nginx
  template:
    metadata:
      labels:
        name: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
