k8s-samples/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: heroes-web-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # Add to generate certificates for this ingress
    kubernetes.io/tls-acme: 'false'
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 8080
