k8s-samples/net-policy.yaml
# Deny all traffic to nginx pods
---
  kind: NetworkPolicy
  apiVersion: networking.k8s.io/v1
  metadata:
    name: access-nginx
  spec:
    podSelector:
      matchLabels:
        run: nginx
    ingress:
    - from:
      - podSelector:
          matchLabels:
            access: "true"
# Deny all ingress traffic
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector: {}
  policyTypes:
  - Ingress
